--- a/resources/assets/less/themes.less
+++ b/resources/assets/less/themes.less
@@ -8,8 +8,8 @@
 
 #theme() when (@theme = default) {
   .background { background: #D2D6DE; }
-  .main-background { background: #FFF; border-left: 1px solid darken(@gray-lightest, 6%); }
-  .sidebar { background: #f8f8f8; border-right: 1px solid darken(@gray-lightest, 3%); }
+  .main-background { background: #FFF; }
+  .sidebar { background: #f8f8f8; border-right: 1px solid #DDD; }
   .top-bar { background: linear-gradient(to bottom, #656565, #444444); }
   .top-bar-text { color: #FFF }
   .hover { color: #fff; background-color: #2B6280 }
