--- a/resources/assets/less/widgets/main-menu.less
+++ b/resources/assets/less/widgets/main-menu.less
@@ -108,7 +108,7 @@
   .sidebar {
     z-index: 1;
     position: absolute;
-    width: @sidebar-width;
+    width: @sidebar-width - 2;
     margin-top: 51px;
   }
 
